# terminal_site

./: .gitignore  Pipfile  README.md  db.sqlite3  manage.py  pyproject.toml
main/: urls.py  views.py
main/static/css/: css-nextdoor.css
main/static/js/: js-index-all.js  js-index3.js  sec.js
main/templates/: exit_without.html  home.html  nextdoor.html  odmin.html  sib_banner.html
main/templates/main/: blog.html  contacts.html  cv.html
terminal_site/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
terminal_site/main/: urls.py  views.py
terminal_site/main/static/css/: css-index.css
terminal_site/main/static/js/: js-index1.js  js-index2.js  js-index4.js  nextdoor.js
terminal_site/main/templates/: exit_without.html  home.html  nextdoor.html  sib_banner.html  sviteribuben.html
terminal_site/main/templates/main/: home.html
terminal_site/terminal_site/: asgi.py  settings.py  urls.py  wsgi.py
